<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ClangTools::Internal::ClangToolsConfigWidget</class>
 <widget class="QWidget" name="ClangTools::Internal::ClangToolsConfigWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>General</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QCheckBox" name="buildBeforeAnalysis">
        <property name="text">
         <string>Build the project before analysis</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="processesLayout">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>Simultaneous processes:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="simultaneousProccessesSpinBox">
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>32</number>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="clangDiagnosticsLayout">
        <item>
         <widget class="QLabel" name="clangDiagnosticsLabel">
          <property name="text">
           <string>Diagnostic Configuration:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="CppTools::ClangDiagnosticConfigsSelectionWidget" name="clangDiagnosticConfigsSelectionWidget" native="true"/>
        </item>
        <item>
         <widget class="QPushButton" name="manageButton">
          <property name="text">
           <string>Manage...</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>183</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CppTools::ClangDiagnosticConfigsSelectionWidget</class>
   <extends>QWidget</extends>
   <header>cpptools/clangdiagnosticconfigsselectionwidget.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
